--- a/contact me.html
+++ b/contact me.html
@@ -11,7 +11,7 @@
     </p>
     <p>email: j596xu@uwaterloo.ca</p>
 
-    <form  action="mailto:jingyanxuxjy@gamil.com" method="post" enctype="text/plain">
+    <form  action="mailto:jingyanxuxjy@gamail.com" method="post" enctype="text/plain">
       <label>Your name:</label>
       <input type="text" name="yourName" value="" > <br>
       <label>Your Email:</label>
