--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Jingyan's personal site</title>
 
   </head>
-  <body> <!--body part of the html file-->
+  <body style="background-color:#EAF6F6;"> <!--body part of the html file-->
     <img src="my cat.jpg" alt="my favourite animal">
     <h1>Jingyan Xu</h1>
     <p> <em>a student from <b><a href="https://uwaterloo.ca/">University of Waterloo</a></b></em></p>
